style: fix spacing on comments.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,14 +330,6 @@ strong {
     font-weight: 550;
 }
 
-li[data-comment]
-.collapsible-body { padding-bottom: 0; }
-
-li[data-comment]
-.collapsible-body
-span
-p { margin: 0; }
-
 #markdownHint {
     font-weight: lighter;
     font-size: small;
